<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.schedule.model.ScheduleViewModel" />
        <variable
            name="taskModel"
            type="com.schedule.model.TaskModelForNT" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".fragment.NewTaskFragment">


        <com.schedule.tools.TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:initValueMode="currentTime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:onTimeChanged="@{(view, hour, minute) -> taskModel.onNumChange(hour, minute)}">

        </com.schedule.tools.TimePicker>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{taskModel.leftTimeText}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/timePicker"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_edit_title_main"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/schedule_edit_title_additional"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            app:chipSpacingHorizontal="6dp"
            app:layout_constraintBottom_toTopOf="@+id/switchRepeat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleLine="false">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={taskModel.stateMonday}"
                android:onClick="@{() -> taskModel.onSelectDaysGroupPressed()}"
                android:text="@string/schedule_repeat_monday_s" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={taskModel.stateTuesday}"
                android:onClick="@{() -> taskModel.onSelectDaysGroupPressed()}"
                android:text="@string/schedule_repeat_tuesday_s" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={taskModel.stateWednesday}"
                android:onClick="@{() -> taskModel.onSelectDaysGroupPressed()}"
                android:text="@string/schedule_repeat_wednesday_s" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={taskModel.stateThursday}"
                android:onClick="@{() -> taskModel.onSelectDaysGroupPressed()}"
                android:text="@string/schedule_repeat_thursday_s" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={taskModel.stateFriday}"
                android:onClick="@{() -> taskModel.onSelectDaysGroupPressed()}"
                android:text="@string/schedule_repeat_friday_s" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={taskModel.stateSaturday}"
                android:onClick="@{() -> taskModel.onSelectDaysGroupPressed()}"
                android:text="@string/schedule_repeat_saturday_s" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={taskModel.stateSunday}"
                android:onClick="@{() -> taskModel.onSelectDaysGroupPressed()}"
                android:text="@string/schedule_repeat_sunday_s" />

        </com.google.android.material.chip.ChipGroup>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/schedule_edit_switch_repeat"

            android:textSize="18sp"
            android:thumb="@drawable/switch_repeat_thumb_selector"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup2"
            app:onCheckedChange="@{(buttonView, isChecked) -> taskModel.onRepeatChanged(isChecked)}"
            app:track="@drawable/switch_track_selector" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:height="70dp"
            android:backgroundTint="@color/selector_button_gray"
            android:onClick="@{() -> viewModel.onCreatePressedNT()}"
            android:text="@string/schedule_edit_button_create"
            android:textColor="?attr/colorControlNormal"
            android:textSize="17sp"
            app:cornerRadius="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/switchRepeat" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>